sshme-in/apps/outline/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-outline
spec:
  host: outline.apps.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
