sshme-in/apps/outline/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: outline-route
  annotations:
    gethomepage.dev/href: "https://outline.sshme.in"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Note taking Tool
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: https://www.getoutline.com/images/logo.svg
    gethomepage.dev/app: outline-route
    gethomepage.dev/name: Outline
    gethomepage.dev/pod-selector: ""
spec:
  parentRefs:
  - name: default-gateway
    namespace: istio-ingress
  hostnames:
  - "outline.sshme.in"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: outline
      port: 3000
